Bug 475098 - KNotes crashes on start
Summary: KNotes crashes on start
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-10-01 14:16 UTC by Nicolas Fella
Modified: 2023-10-02 05:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-10-01 14:16:49 UTC
ASSERT: "!files.isEmpty()" in file /home/nico/kde/src/kxmlgui/src/kxmlguiversionhandler.cpp, line 173

#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007ffff42b08f3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#2  0x00007ffff425fafe in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#3  0x00007ffff424887f in __GI_abort () at abort.c:79
#4  0x00007ffff48b6a64 in qAbort () at /home/nico/workspace/qt6/qtbase/src/corelib/global/qglobal.cpp:161
#5  0x00007ffff48eb635 in qt_message_fatal<QString&> (message=..., context=...) at /home/nico/workspace/qt6/qtbase/src/corelib/global/qlogging.cpp:2003
#6  qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, context=..., 
    msg=msg@entry=0x7ffff4c2ddb8 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fffffffcd68)
    at /home/nico/workspace/qt6/qtbase/src/corelib/global/qlogging.cpp:378
#7  0x00007ffff48b76fa in QMessageLogger::fatal (this=this@entry=0x7fffffffce40, msg=msg@entry=0x7ffff4c2ddb8 "ASSERT: \"%s\" in file %s, line %d")
    at /home/nico/workspace/qt6/qtbase/src/corelib/global/qlogging.cpp:901
#8  0x00007ffff48b69e1 in qt_assert (assertion=<optimized out>, file=<optimized out>, line=<optimized out>)
    at /home/nico/workspace/qt6/qtbase/src/corelib/global/qassert.cpp:68
#9  0x00007ffff73642ca in KXmlGuiVersionHandler::KXmlGuiVersionHandler (this=0x7fffffffd1a0, files=...) at /home/nico/kde/src/kxmlgui/src/kxmlguiversionhandler.cpp:173
#10 0x00007ffff7341c39 in KXMLGUIClient::findMostRecentXMLFile (files=..., doc=...) at /home/nico/kde/src/kxmlgui/src/kxmlguiclient.cpp:700
#11 0x00000000004249af in KNotesApp::KNotesApp (this=this@entry=0x700300, parent=parent@entry=0x0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>)
    at /home/nico/kde/src/knotes/src/apps/knotesapp.cpp:184
#12 0x000000000041be27 in Application::activate (this=0x7fffffffd850, args=..., workingDir=...) at /home/nico/kde/src/knotes/src/apps/application.cpp:32
#13 0x00007ffff7f7d8cb in KontactInterface::PimUniqueApplication::start (arguments=...) at /home/nico/kde/src/kontactinterface/src/pimuniqueapplication.cpp:157
#14 0x0000000000419f49 in main (argc=<optimized out>, argv=<optimized out>) at /home/nico/kde/src/knotes/src/apps/main.cpp:48

SOFTWARE/OS VERSIONS
KDE Frameworks Version: master 
Qt Version: 6.6
KNotes commit e2ee992f99f734cd89d0d79ad436e2b79a9b8c5c
Comment 1 Laurent Montel 2023-10-02 05:24:21 UTC
Git commit 77b3810d64decd5da6a37b242867be3967208a8a by Laurent Montel.
Committed on 02/10/2023 at 07:23.
Pushed by mlaurent into branch 'master'.

Fix 475098:KNotes crashes on start

M  +1    -1    src/apps/knotesapp.cpp

https://invent.kde.org/pim/knotes/-/commit/77b3810d64decd5da6a37b242867be3967208a8a