Fix 475098:KNotes crashes on start

BUG: 475098